test: Tested * Integration of model and agent\n * Training of the agent using adaptive noise scaling

--- a/OpenAI_Gym_CartPole-v0.ipynb
+++ b/OpenAI_Gym_CartPole-v0.ipynb
@@ -33,8 +33,6 @@
    ],
    "source": [
     "import gym\n",
-    "import numpy as np\n",
-    "from collections import deque\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
@@ -81,32 +79,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Define the agent"
+    "### 3. Instanciate agent and train it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Definition"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4. Train the agent"
+    "from ce_w_ans_agent import hill_climbing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 100\tAverage Score: 41.89\n",
+      "Episode 200\tAverage Score: 129.71\n",
+      "Environment solved in 159 episodes!\tAverage Score: 195.14\n"
+     ]
+    }
+   ],
    "source": [
-    "## Training phase"
+    "scores = hill_climbing(env)"
    ]
   },
   {
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
